examples/test/testpolicy9918.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9918
  namespace: namespace169
spec:
  podSelector:
    matchLabels:
      key21: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value48
          key17: value27
      podSelector:
        matchLabels:
          key42: value40
          key22: value2
